--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -744,7 +744,7 @@
         <button onclick="toggleControlMode()">Control Mode</button>
         <!-- <input type="file" id="fileInput" accept=".yaml" />
         <button id="loadWaypointButton">Load Waypoint</button> -->
-        <button id="waypointListButton">Waypoint List</button>
+        <!-- <button id="waypointListButton">Waypoint List</button> -->
         <button onclick="speedUpdatePopup()">Update Speed</button>
         <button onclick="robotController()">Robot Controller</button>
     </div>
@@ -888,7 +888,7 @@
         <!-- <button onclick="startNewGroup()">Start New Group</button> -->
         <!-- <input type="color" id="colorPicker" value="#0000ff">  -->
         <!-- <button onclick="toggleSelectMode()">Select Mode</button> -->
-        <button id="saveWaypointButton">Save Waypoint</button>
+        <!-- <button id="saveWaypointButton">Save Waypoint</button> -->
     </div>
     <!-- 저장 Waypoint 목록 -->
     <div id="overlay" style="display: none;"></div>
@@ -1097,18 +1097,18 @@
         }
 
         // Waypoint 목록용 변수 선언
-        const waypointListButton = document.getElementById('waypointListButton');
+        // const waypointListButton = document.getElementById('waypointListButton');
         const waypointPopup = document.getElementById('waypoint-popup');
         const overlay = document.getElementById('overlay');
         const fileListElement = document.getElementById('file-list');
         const closeButton = document.getElementById('closeButton');
 
         // Waypoint List 버튼 클릭 시 Waypoint 목록 열기
-        waypointListButton.addEventListener('touchstart', () => {
-            fetchYAMLFiles();
-            waypointPopup.style.display = 'block';
-            overlay.style.display = 'block';
-        });
+        // waypointListButton.addEventListener('touchstart', () => {
+        //     fetchYAMLFiles();
+        //     waypointPopup.style.display = 'block';
+        //     overlay.style.display = 'block';
+        // });
 
         // Close 버튼 클릭 시 Waypoint 목록 닫기
         closeButton.addEventListener('touchstart', () => {
@@ -1117,18 +1117,18 @@
         });
 
         // Waypoint 저장 목록용 변수 선언
-        const saveWaypointButton = document.getElementById('saveWaypointButton');
+        // const saveWaypointButton = document.getElementById('saveWaypointButton');
         const saveWaypointPopup = document.getElementById('save-waypoint-popup');
         const saveFileListElement = document.getElementById('file-save-list');
         const saveButton = document.getElementById('saveButton');
         const saveCloseButton = document.getElementById('saveCloseButton');
 
         // Save Waypoint 버튼 클릭 시 Waypoint 저장 목록 열기
-        saveWaypointButton.addEventListener('touchstart', () => {
-            saveWaypointFilesPopup();
-            saveWaypointPopup.style.display = 'block';
-            overlay.style.display = 'block';
-        });
+        // saveWaypointButton.addEventListener('touchstart', () => {
+        //     saveWaypointFilesPopup();
+        //     saveWaypointPopup.style.display = 'block';
+        //     overlay.style.display = 'block';
+        // });
         
         // Save 버튼 클릭 시 Waypoint 저장
         saveButton.addEventListener('touchstart', () => {
