--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -4052,7 +4052,7 @@ ${waypointsYamlStr}
                     .from('Waypoint')
                     .select('latitude, longitude, name, type, yaw')
                     .eq('pathId', pathId)
-                    .order('id', { ascending: true }); // 항상 id 기준 정렬 유지
+                    .order('id', { ascending: true });
 
                 if (error) {
                     console.error('Waypoint 데이터 조회 오류:', error);
@@ -4065,7 +4065,7 @@ ${waypointsYamlStr}
                 }
 
                 let waypointsToSend = waypoints;
-                
+
                 if (reverse) {
                     // Waypoints 순서를 역순으로 변경하고, yaw(heading)를 반전 (라디안 기준)
                     const pi = Math.PI;
@@ -4075,7 +4075,7 @@ ${waypointsYamlStr}
                     }));
                 }
 
-                // Waypoints 배열을 한 번에 WebSocket으로 전송
+                // Waypoints 배열을 WebSocket으로 전송
                 const waypointData = {
                     command: "start_navigation",
                     waypoints: waypointsToSend.map(wp => ({
@@ -4083,15 +4083,23 @@ ${waypointsYamlStr}
                         longitude: wp.longitude,
                         heading: wp.yaw,
                         name: wp.name,
-                        type: wp.type,
-
+                        type: wp.type
                     }))
                 };
 
-                // 전송할 Waypoint 데이터 콘솔에 출력 (확인용)
                 console.log("전송할 WebSocket 데이터:", JSON.stringify(waypointData, null, 2));
-
                 socket.send(JSON.stringify(waypointData));
+
+                // 각 Waypoint의 타입에 따라 속도 설정
+                waypointsToSend.forEach(wp => {
+                    const speedSettings = {
+                        0: 0.5,  // 기본 속도
+                        1: 0.1,  // type이 1일 때 속도 설정
+                        // 추가 타입별 속도 설정 가능
+                    };
+                    const speed = speedSettings[wp.type] || 0.5; // 타입별 속도 설정, 기본값은 0.3
+                    updateRobotSpeed(speed);  // Waypoint의 타입에 맞는 속도를 별도 WebSocket으로 전송
+                });
 
             } catch (error) {
                 console.error("Unexpected error while loading waypoints from database:", error);
