debugging robot list

--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -2857,6 +2857,7 @@ ${waypointsYamlStr}
         function openRobotListPopup() {
             const robotListPopup = document.getElementById('robotListPopup');
             const robotList = document.getElementById('robotList');
+            console.log("button clicked");
 
 
             robotList.innerHTML = '';
