--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -701,19 +701,20 @@
 
         /* 팝업 스타일 */
         #robotListPopup {
-            display: none; /* 기본적으로 숨김 */
+            display: none;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background: white;
+            background: #ffffff; /* 배경색 */
             padding: 20px;
-            border: 1px solid black;
+            border: 1px solid #ddd;
+            border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            z-index: 2000; /* 지도 위에 표시 */
-            max-width: 80%; /* 최대 너비 */
-            max-height: 80%; /* 최대 높이 */
-            overflow-y: auto; /* 스크롤 가능하도록 */
+            z-index: 2000; /* 지도보다 위에 표시 */
+            max-width: 400px; /* 팝업 너비 */
+            max-height: 70%; /* 최대 높이 */
+            overflow-y: auto; /* 스크롤 가능 */
         }
 
         /* 로봇 리스트 스타일 */
@@ -724,9 +725,34 @@
         }
 
         #robotList li {
-            margin: 5px 0;
-            padding: 5px;
-            border-bottom: 1px solid #ddd;
+            padding: 10px;
+            background-color: #f8f9fa;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            margin-bottom: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        #robotList li:hover {
+            background-color: #e9ecef; /* 호버 시 색 변경 */
+        }
+
+        /* 닫기 버튼 스타일 */
+        #closePopupButton {
+            display: block;
+            margin: 10px auto 0 auto;
+            padding: 8px 16px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        #closePopupButton:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
