--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -706,21 +706,30 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background: linear-gradient(135deg, #ffffff, #e3f2fd); /* 부드러운 배경 그라데이션 */
+            background: #ffffff;
             padding: 30px;
             border: 1px solid #ddd;
             border-radius: 15px;
             box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-            z-index: 2000; /* 지도보다 위에 표시 */
-            max-width: 600px; /* 팝업 너비 */
+            z-index: 2000;
+            max-width: 600px;
             max-height: 80%; /* 최대 높이 */
             overflow-y: auto; /* 스크롤 가능 */
             font-family: Arial, sans-serif;
         }
 
+        /* 제목 스타일 */
+        #popupTitle {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #1976d2; /* 강조된 파란색 */
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
         /* 로봇 리스트 스타일 */
         #robotList {
-            list-style-type: none; /* 기본 리스트 스타일 제거 */
+            list-style-type: none;
             padding: 0;
             margin: 0;
         }
@@ -731,26 +740,23 @@
             border: 1px solid #ddd;
             border-radius: 10px;
             margin-bottom: 10px;
-            cursor: pointer;
-            transition: all 0.3s ease;
+            font-size: 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        #robotList li strong {
+            font-weight: bold;
         }
 
         #robotList li:hover {
-            background-color: #e1f5fe; /* 호버 시 색 변경 */
-            transform: translateY(-2px); /* 약간 위로 올라감 */
+            background-color: #e1f5fe;
+            transform: translateY(-2px);
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        /* 팝업 제목 스타일 */
-        #popupTitle {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: #1976d2; /* 파란색 강조 */
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        /* 닫기 버튼 스타일 */
+        /* 닫기 버튼 */
         #closePopupButton {
             display: block;
             margin: 20px auto 0 auto;
