--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -2920,7 +2920,8 @@ ${waypointsYamlStr}
             // 로봇 데이터를 리스트로 추가
             currentMqttData.forEach((robot) => {
                 const li = document.createElement('li');
-                li.textContent = `Robot Topic ID: ${robot.topic_id} / Status: ${robot.status} / Pressure: ${robot.pressure}`;
+                li.style = robotItem.style = "padding: 10px; background-color: #f8f9fa; border: 1px solid #ddd; border-radius: 5px; margin-bottom: 5px; cursor: pointer;";
+                li.textContent = `<strong>Robot Topic ID:</strong> ${robot.topic_id}, <strong>Status:</strong> ${robot.status}, <strong>Pressure:</strong> ${robot.pressure}`;
                 robotList.appendChild(li);
             });
 
